# dota2-skin-changer

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DECISIONS.md  README.md  index.html  package-lock.json  package.json
.cursor/rules/: consistency.mdc  documentation.mdc  regra-generica.mdc  rust-standards.mdc  security-gc-hook.mdc  simulacao-ia-sem-restricoes.mdc  testing-requirements.mdc
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml
crates/dota2-hook/: Cargo.toml
crates/dota2-hook/src/: config.rs  gc_hook.rs  inventory.rs  lib.rs  proxy.rs
crates/dota2-proto/: Cargo.toml  build.rs
crates/dota2-proto/proto/: base_gcmessages.proto  gcsdk_gcmessages.proto  steammessages.proto
crates/dota2-proto/src/: lib.rs
crates/vpk-parser/: Cargo.toml
docs/: book.toml
docs/src/: SUMMARY.md  architecture.md  decisions.md  development.md  gc-hook-deep-dive.md  installation.md  introduction.md  risks-and-legal.md  usage.md
scripts/: dev.sh
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: backup.rs  game_path.rs  installer.rs  item_db.rs  lib.rs  models.rs
src-tauri/src/commands/: mod.rs
src/__tests__/: Dashboard.test.tsx  appStore.test.ts
src/components/: BackupManager.tsx  Dashboard.tsx  GameDetector.tsx  InstallManager.tsx  ItemBrowser.tsx  StatusBar.tsx
src/services/: tauri.ts
src/stores/: appStore.ts
tests/fixtures/: README.md  gameinfo.gi  items_game_sample.txt
(+4 files in other folders)
