[package]
name = "dota2-skin-changer"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Dota 2 Skin Changer launcher — installs and manages the GC hook"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
bincode = "3"
vpk-parser = { path = "../crates/vpk-parser" }
dota2-proto = { path = "../crates/dota2-proto" }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[dev-dependencies]
tempfile = "3"
